--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -67,7 +67,9 @@ body {
     border-radius: 99px;
     border: 1px solid rgba(255, 255, 255, 0.10);
     background: rgba(255, 255, 255, 0.15);
+    color: #fff;
     transition: background-color 200ms ease;
+    font-family: "Inter", sans-serif;
 }
 
 .secondary-btn:hover {
@@ -94,7 +96,7 @@ body {
 }
 
 body.joinroom {
-    background-image: url(image22.png);
+    background-image: url(assets/image22.png);
     background-size: cover;
 }
 
@@ -123,8 +125,6 @@ body.joinroom {
   text-align: center;
   font-size: 32px;
   margin: 0px 0 10px 0;
-  font-family: Arial, sans-serif;
-  
 }
 
 .login-boks p {
@@ -132,13 +132,12 @@ body.joinroom {
   text-align: center;
   font-size: 16px;
   margin: 0 0 30px 0;
-  font-family: Arial, sans-serif;
+
 }
 
 .login-boks label {
     display: block;
     color: white;
-    font-family: Arial, sans-serif;
     font-size: 14px;
     margin: 0 auto 8px 20px;
     text-align: left;
@@ -167,19 +166,174 @@ body.joinroom {
 }
 
 .content .left {
+    display: flex;
     border-right: 2px solid rgba(255, 255, 255, 0.10);
     flex: 1 0 0;
+    align-items: center;
+    justify-content: center;
 }
 
+.content,.left .container {
+    display: flex;
+    justify-content: center;
+}
+.cover-wrapper {
+    align-self: center;
+}
 .cover {
     border-radius: 24px;
 }
+
+.inline-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-self: stretch;
+}
+
+.inline-container div i {
+    font-size: 26px;
+}
+.song-wrapper {
+    padding-top: 16px;
+}
+
+
+/* Player Progress Styles*/
+.progress-container {
+    margin-top: 16px;
+    position: relative;
+    height: 8px;
+    align-self: stretch;
+    justify-content: center;
+    background: rgba(255, 255, 255, 0.15);
+    border-radius: 99px;
+}
+
+#progress-bar {
+    justify-self: stretch;
+    background: #D9D9D9;
+    width: 0%;
+    transition: width 0.1s linear;
+}
+
+#progress-knob {
+    width: 14px;
+    height: 14px;
+    background: #D9D9D9;
+    border-radius: 99px;
+    position: absolute;
+    left: 0%;
+    transform: translateX(-50%);
+    transition: left 0.1s linear;
+}
+
+
 
 .content .right {
     width: 360px;
 }
 
+.content .right .queue {
+    padding: 20px;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.15);
+}
+
+.content .right .events {
+    padding: 20px;
+}
+
+
 .footer {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
     border-top: 2px solid rgba(255, 255, 255, 0.10);
-    height: 100px
+    height: 100px;
+    align-items: center;
+    justify-content: center;
+}
+
+.btn-wrapper {
+    display: flex;
+    gap: 8px;
+}
+
+.btn-wrapper .secondary-btn {
+    font-size: 18px;
+    font-weight: 600;
+}
+
+
+#more-options i {
+    font-size: 24px;
+}
+
+#more-options p {
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.join-wrapper {
+    position: relative;
+}
+
+.dropdown {
+    position: absolute;
+    top: 62px;
+    right: 0px;
+    display: flex;
+    width: 250px;
+    flex-direction: column;
+    border-radius: 16px;
+    border: 1px solid rgba(255, 255, 255, 0.06);
+    background: #1E1E1E;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.35);
+}
+
+#join-dropdown {
+    display: none;
+  }
+  
+#join-dropdown.open {
+    display: block;
+}
+
+.dropdown-header {
+    display: flex;
+    padding: 12px 0;
+    flex-direction: column;
+    align-items: center;
+    gap: 4px;
+    align-self: stretch;
+}
+.dropdown-content {
+    border-top: 1px solid rgba(255, 255, 255, 0.06);
+    display: flex;
+    padding: 20px;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+    align-self: stretch;
+}
+
+.qr-wrapper {
+    width: 140px;
+    aspect-ratio: 1/1;
+}
+
+.code-wrapper {
+    cursor: copy;
+    display: flex;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    align-self: stretch;
+    border-radius: 12px;
+    background: rgba(255, 255, 255, 0.06);
+}
+
+.code-wrapper:hover {
+    background: rgba(255, 255, 255, 0.12);
 }
