--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -426,7 +426,7 @@ form {
 .logo-container {
     width: 100%;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     margin-bottom: 40px;
 }
 .logo {
