--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -55,6 +55,7 @@ body {
 
 
 .brand-btn {
+    display: flex;
     cursor: pointer;
     padding: 14px 28px;
     justify-content: center;
@@ -573,7 +574,7 @@ form {
     position: fixed;
     inset: 0;
     background: rgba(0,0,0,0.55);
-    backdrop-filter: blur(12px);
+    backdrop-filter: blur(6px);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -585,12 +586,12 @@ form {
 }
 
 .search-modal-content {
-    width: 600px;
-    max-width: 90%;
-    background: rgba(30,30,30,0.85);
+    width: 100%;
+    max-width: 600px;
+    background: rgba(30, 30, 30, 0.98);
     padding: 24px;
     border-radius: 16px;
-    color: white;
+    color: #fff;
 }
 
 .search-header {
@@ -641,15 +642,14 @@ form {
 .search-item {
     display: flex;
     align-items: center;
-    gap: 12px;
+    gap: 8px;
     padding: 12px;
-    border-radius: 8px;
-    background: rgba(255,255,255,0.07);
+    border-radius: 12px;
     cursor: pointer;
 }
 
 .search-item:hover {
-    background: rgba(255,255,255,0.14);
+    background: rgba(255, 255, 255, 0.10);
 }
 
 .skip-button:hover {
