--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -333,11 +333,13 @@ label {
 .btn-wrapper {
     display: flex;
     gap: 8px;
+
 }
 
 .btn-wrapper .secondary-btn {
     font-size: 18px;
     font-weight: 600;
+    background-color: #2E6CF5;
 }
 
 
@@ -701,5 +703,6 @@ form {
     padding: 10.07px 16.783px;
     flex-direction: column;
     align-items: flex-start;
-    
+    height: 100%;
 }
+ 
