--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -10,6 +10,12 @@ h2 {
     line-height: normal;
 }
 
+#room-name {
+    font-size: 18px;
+    font-weight: 600;
+    line-height: normal;
+}
+
 button {
     font-weight: 600;
     font-size: 16px;
@@ -130,6 +136,12 @@ body {
 
 .left-inner .text-wrapper p {
     font-size: 16px;
+}
+
+.right-inner {
+    display: flex;
+    align-items: center;
+    gap: 32px;
 }
 
 body.joinroom {
@@ -764,6 +776,42 @@ form {
 
 .play-status p, .play-status i {
     color: #2E6CF5;
-    font-size: 12px;
+    font-size: 14px;
     text-wrap: nowrap;
+}
+
+
+#user-list {
+    display: flex;
+    gap: 12px;
+}
+
+.user-item {
+    display: flex;
+    gap: 8px;
+}
+
+.user-img {
+    width: 42px;
+    height: 42px;
+}
+
+.user-item .text-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.user-item .text-wrapper .user-name {
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+}
+
+.user-item .text-wrapper .user-role {
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 18px;
+    color: rgba(255, 255, 255, 0.60);
 }
