--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -822,3 +822,42 @@ form {
     line-height: 18px;
     color: rgba(255, 255, 255, 0.60);
 }
+
+.events-container {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    padding: 20px;
+}
+
+#event-list {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.event-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-self: stretch;
+}
+
+.event-left {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.event-item .event-left img {
+    width: 34px;
+    height: 34px;
+}
+
+.event-item .event-left p {
+    font-size: 16px;
+}
+
+.event-item p {
+    font-size: 12px;
+}
